basic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-basic
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo-basic
