basic/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rollout-basic-ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`basic`)
    kind: Rule
    services:
    - name: rollouts-demo-basic
      port: 80
